--- a/index.html
+++ b/index.html
@@ -47,8 +47,15 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/sarainbloom" target="_blank">Sara Lin</a>
+          and is
+          <a
+            href="https://github.com/sarainbloom/SaraLin-Weather-App"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
