--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>
           This project was coded by
           <a href="https://github.com/sarainbloom" target="_blank">Sara Lin</a>
-          and is
+          🖤 ⚔️ 🖤 and is
           <a
             href="https://github.com/sarainbloom/SaraLin-Weather-App"
             target="_blank"
@@ -56,7 +56,11 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://papaya-snickerdoodle-26aac3.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
